Added ManageUsers DataGrid with modal Forms
Added ManageUsers DataGrid with modal Forms, still errors when Creating New User

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -20,6 +20,9 @@
                 <a href="/ManageTeams" class="btn btn-secondary">
                     <i class="bi bi-people ms-2"></i> Manage Teams
                 </a>
+                <a href="/ManageUsers" class="btn btn-secondary ms-2">
+                    <i class="bi bi-person-gear ms-2"></i> Manage Users
+                </a>
             }
         </div>
     </div>
