Added ManageUsers and Create New USer functionality and added Admin UI for MigrateData into JSON and back (LiteDB is JSON based DB) Test it, found bugs report it to this repository.

--- a/Pages/CreateEntry.cshtml
+++ b/Pages/CreateEntry.cshtml
@@ -81,7 +81,7 @@
         <button type="submit" class="btn btn-primary">Create Entry</button>                </div>
 </form>
 
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<partial name="_ValidationScriptsPartial" />
 <script>
     // Toggle password visibility
     document.getElementById('togglePassword').addEventListener('click', function () {
