Fixed bug, for not saving New Entry, when normal user is logged in. And fixed Team show in Index.cshtml

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -232,7 +232,7 @@
                     }
                     else
                     {
-                        <input type="hidden" asp-for="Entry.TeamId" />
+                        <input type="hidden" asp-for="Entry.TeamId" value="@Model.CurrentTeamId" />
                     }
                 </div>
             </div>
